--- a/vue-as/src/assets/css/page.css
+++ b/vue-as/src/assets/css/page.css
@@ -248,7 +248,7 @@ body {
     width:31%;
     margin-bottom: 20px;
     /* min-height: 327px; */
-    margin-right: 2.3%; 
+    margin-right: 2.3%;
     padding: 6px;
     border: 1px solid #e6e6e6;
     border-radius: 4px;
@@ -256,9 +256,9 @@ body {
 .article-list .preview{
     display: block;
     max-width: 310px;
-    max-height: 140px;
+    /* max-height: 140px; */
     margin-bottom: 5px;
-    overflow: hidden;
+    /* overflow: hidden; */
     text-align: center;
     min-height: 100px;
 }
@@ -405,7 +405,7 @@ legend{
 }
 .form-group textarea{
     padding: 5px;
-    min-height: 60px; 
+    min-height: 60px;
 }
 .form-group .tags{
     margin-top: 10px;
@@ -451,12 +451,15 @@ legend{
     line-height: 30px;
     width: 220px;
 }
-.form-group-editor #upload_img{   
-    width: 140px;    
+.form-group-editor #upload_img{
+    width: 140px;
 }
 .form-group .cover-img {
     width: 100px;
-    height: 100px;
+    max-width: 200px;
+}
+.post-videos .cover-img {
+    width: 200px;
 }
 .form-group .label-radio{
     width: auto;
@@ -650,7 +653,7 @@ legend{
 .article-edit-list .tags{
     margin-top: 10px;
 }
-.edit-btns span{
+.edit-btns a{
     display: inline-block;
     line-height: 28px;
     border: 1px solid #dddde4;
@@ -659,10 +662,10 @@ legend{
     border-radius: 3px;
     cursor: pointer;
 }
-.edit-btns span:hover{
+.edit-btns a:hover{
     box-shadow: inset 0 0 6px rgba(0,0,0,.1);
 }
-.edit-btns span .iconfont{
+.edit-btns a .iconfont{
     display: inline-block;
     width: 30px;
     vertical-align: middle;
@@ -672,7 +675,7 @@ legend{
     background-image: -webkit-linear-gradient( 90deg, rgb(244,244,244) 0%, rgb(255,255,255) 100%);
     background-image:     -ms-linear-gradient( 90deg, rgb(244,244,244) 0%, rgb(255,255,255) 100%);
 }
-.edit-btns span em{
+.edit-btns a em{
     padding: 0 10px;
     vertical-align: middle;
     border-left: 1px solid #dddde4;
@@ -889,6 +892,9 @@ legend{
     font-size: 16px;
     color: #1f90c7;
 }
+.pagination_nav{padding: 0 30px}
+.pagination{display:inline-block;padding-left:0;margin:20px 0;border-radius:4px}.pagination>li{display:inline}.pagination>li>a,.pagination>li>span{position:relative;float:left;padding:6px 12px;margin-left:-1px;line-height:1.42857143;color:#337ab7;text-decoration:none;background-color:#fff;border:1px solid #ddd}.pagination>li:first-child>a,.pagination>li:first-child>span{margin-left:0;border-top-left-radius:4px;border-bottom-left-radius:4px}.pagination>li:last-child>a,.pagination>li:last-child>span{border-top-right-radius:4px;border-bottom-right-radius:4px}.pagination>li>a:focus,.pagination>li>a:hover,.pagination>li>span:focus,.pagination>li>span:hover{z-index:2;color:#23527c;background-color:#eee;border-color:#ddd}.pagination>.active>a,.pagination>.active>a:focus,.pagination>.active>a:hover,.pagination>.active>span,.pagination>.active>span:focus,.pagination>.active>span:hover{z-index:3;color:#fff;cursor:default;background-color:#337ab7;border-color:#337ab7}.pagination>.disabled>a,.pagination>.disabled>a:focus,.pagination>.disabled>a:hover,.pagination>.disabled>span,.pagination>.disabled>span:focus,.pagination>.disabled>span:hover{color:#777;cursor:not-allowed;background-color:#fff;border-color:#ddd}
+
 /*-- @media --*/
 @media only screen and (max-width:1024px) {
     .inner{
