--- a/vue-as/src/assets/css/page.css
+++ b/vue-as/src/assets/css/page.css
@@ -3,7 +3,7 @@
 h1, h2, h3, h4, h5, h6, ul, ol, p, dl, dt, dd {margin: 0;}
 ul, ol {padding: 0;list-style-type: none;}
 a{text-decoration: none;}
-a:focus{outline: none;}
+a:focus,button:focus{outline: none;}
 img,ins{vertical-align:bottom;max-width:100%;}
 
 /*! fn */
@@ -256,15 +256,26 @@ body {
     -webkit-column-break-inside: avoid;
     break-inside: avoid;
 }
+.article-list .item .tags{
+  width:100%;
+  max-height: 30px;
+  overflow: hidden;
+}
+.tags i{
+  font-style: normal;
+  margin-right: 10px;
+}
 .article-list .preview{
     display: block;
     max-width: 310px;
     min-height: 100px;
+    height: 140px;
     margin-bottom: 5px;
     overflow: hidden;
     text-align: center;
 }
 .article-list .preview img{
+    display: inline-block;
     transition: all .3s ease;
     -webkit-backface-visibility: hidden;
     -webkit-transform-style: preserve-3d;
@@ -384,7 +395,9 @@ legend{
     height: 38px;
     line-height: 38px;
     padding: 0 5px;
-    border: 1px solid #e6e6e6;
+    border: 1px solid #e6e6e6;    
+}
+.form-group select{
     text-transform: capitalize;
 }
 .form-group select[disabled]{
@@ -459,6 +472,7 @@ legend{
     width: 140px;
 }
 .form-group .cover-img {
+    display: inline-block;
     width: 100px;
     max-width: 200px;
 }
@@ -731,7 +745,7 @@ legend{
 .icon-pinterest{color: #c41f25;}
 .icon-tumblr{color: #385a74;}
 .article{
-    padding:30px 80px;
+    padding:30px 140px;
 }
 .article .tt{
     font-size: 28px;
@@ -746,7 +760,8 @@ legend{
 .article .detail{
     margin: 30px 0;
     color: #7c7c7c;
-    line-height: 21px;
+    line-height: 1.5;
+    font-size: 16px;
 }
 .article .detail img{
     margin: 20px 0;
@@ -904,7 +919,28 @@ legend{
 }
 .pagination_nav{padding: 0 30px}
 .pagination{display:inline-block;padding-left:0;margin:20px 0;border-radius:4px}.pagination>li{display:inline}.pagination>li>a,.pagination>li>span{position:relative;float:left;padding:6px 12px;margin-left:-1px;line-height:1.42857143;color:#337ab7;text-decoration:none;background-color:#fff;border:1px solid #ddd}.pagination>li:first-child>a,.pagination>li:first-child>span{margin-left:0;border-top-left-radius:4px;border-bottom-left-radius:4px}.pagination>li:last-child>a,.pagination>li:last-child>span{border-top-right-radius:4px;border-bottom-right-radius:4px}.pagination>li>a:focus,.pagination>li>a:hover,.pagination>li>span:focus,.pagination>li>span:hover{z-index:2;color:#23527c;background-color:#eee;border-color:#ddd}.pagination>.active>a,.pagination>.active>a:focus,.pagination>.active>a:hover,.pagination>.active>span,.pagination>.active>span:focus,.pagination>.active>span:hover{z-index:3;color:#fff;cursor:default;background-color:#337ab7;border-color:#337ab7}.pagination>.disabled>a,.pagination>.disabled>a:focus,.pagination>.disabled>a:hover,.pagination>.disabled>span,.pagination>.disabled>span:focus,.pagination>.disabled>span:hover{color:#777;cursor:not-allowed;background-color:#fff;border-color:#ddd}
-
+/*loadding*/
+.loading{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0,0,0,.2);
+    text-align: center;
+    color: #fff;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.loading img{
+    margin-bottom: 5px;
+}
 /*-- @media --*/
 @media only screen and (max-width:1024px) {
     .inner{
